# rModbus

./: Cargo.toml  config.json  register_config.json
.github/workflows/: ci-cd.yml
src/: gui.rs  lib.rs  main.rs  main_gui.rs
