[package]
name = "rustrrrrrrr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustrrrrrrr"
path = "src/main.rs"

[[bin]]
name = "rustrrrrrrr-gui"
path = "src/main_gui.rs"

[dependencies]
serialport = "4.2.0"
modbus = "1.1.3"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
eframe = "0.30.0"
egui = "0.30.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
